src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>AP_or_IB_Course_Completed__c</fullName>
        <label>AP or IB Course Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>n/a (school does not offer)</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active/Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_Math_Courses_Completed__c</fullName>
        <label>Advanced Math Courses Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_at_Start_of_CPS_Service_Year__c</fullName>
        <description>Used on APR report.</description>
        <formula>YEAR(Campaign.Program_Start_Date__c) - YEAR(Contact.Birthdate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age at Start of CPS Service Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associate_Degree_Attained__c</fullName>
        <label>Associate Degree Obtained</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (attained associate degree)</fullName>
                </value>
                <value>
                    <fullName>No (other postsec credential)</fullName>
                </value>
                <value>
                    <fullName>Accepted, deferred to next semester</fullName>
                </value>
                <value>
                    <fullName>No assoc. degree, Transferred to 4-yr</fullName>
                </value>
                <value>
                    <fullName>Still enrolled in assoc. degree program</fullName>
                </value>
                <value>
                    <fullName>Left (incomplete) assoc., no transfer</fullName>
                </value>
                <value>
                    <fullName>n/a (still in HS)</fullName>
                </value>
                <value>
                    <fullName>n/a (HS grad not enrolled in postsec)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bachelors_Degree_Attained__c</fullName>
        <label>Bachelor&apos;s Degree Obtained</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (bachelor’s degree)</fullName>
                </value>
                <value>
                    <fullName>No (other postsec credential)</fullName>
                </value>
                <value>
                    <fullName>Accepted, deferred to next semester</fullName>
                </value>
                <value>
                    <fullName>Still enrolled in bach. degree program</fullName>
                </value>
                <value>
                    <fullName>Left (incomplete)</fullName>
                </value>
                <value>
                    <fullName>n/a (still in HS)</fullName>
                </value>
                <value>
                    <fullName>n/a (HS grad not enrolled in postsec)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPS_Target_School_City__c</fullName>
        <description>See description for CPS Target School NCES School ID.</description>
        <formula>Targeted_School__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPS Target School City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPS_Target_School_NCES_School_ID__c</fullName>
        <description>This is bringing the secondary school info onto the Campaign Member, so APR report doesn&apos;t need Apex code (because it only needs to go 1 level deep vs. 2).  This field is for APR only and should not be shown on a screen to the user.</description>
        <formula>Targeted_School__r.NCES_School_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPS Target School NCES School ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPS_Target_School_Program__c</fullName>
        <formula>IF(INCLUDES( Targeted_School__r.Is_Target_School_for_Program_s__c , &quot;TS Boston&quot;), &quot;TS Boston;&quot;, NULL)   + 
IF(INCLUDES( Targeted_School__r.Is_Target_School_for_Program_s__c , &quot;TS Brockton&quot;), &quot;TS Brockton;&quot; , NULL)  + 
IF(INCLUDES( Targeted_School__r.Is_Target_School_for_Program_s__c , &quot;EOC Boston&quot;), &quot;EOC Boston;&quot; , NULL)  + 
IF(INCLUDES( Targeted_School__r.Is_Target_School_for_Program_s__c , &quot;EOC Brockton&quot;), &quot;EOC Brockton;&quot; , NULL)  + 
IF(INCLUDES( Targeted_School__r.Is_Target_School_for_Program_s__c , &quot;UB Brockton&quot;), &quot;UB Brockton&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPS Target School Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPS_Target_School_State__c</fullName>
        <description>See description for CPS Target School NCES School ID.</description>
        <formula>Targeted_School__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPS Target School State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPS_Target_School_Zip__c</fullName>
        <description>see Description for CPS Target School NCES School ID.</description>
        <formula>Targeted_School__r.Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPS Target School Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Diploma_Completed__c</fullName>
        <label>Certificate/Diploma Completed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (occupational/educational program)</fullName>
                </value>
                <value>
                    <fullName>No (other postsec credential)</fullName>
                </value>
                <value>
                    <fullName>Accepted, deferred to next semester</fullName>
                </value>
                <value>
                    <fullName>Still enrolled in cert/diploma program</fullName>
                </value>
                <value>
                    <fullName>Left (incomplete) cert/diploma program</fullName>
                </value>
                <value>
                    <fullName>n/a (still in HS)</fullName>
                </value>
                <value>
                    <fullName>n/a (HS grad, not enrolled in postsec)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>College_Status__c</fullName>
        <label>College Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted into postsec, not yet enrolled</fullName>
                </value>
                <value>
                    <fullName>First Year Postsec student</fullName>
                </value>
                <value>
                    <fullName>Postsec student beyond first year</fullName>
                </value>
                <value>
                    <fullName>Completed and continuing postsec</fullName>
                </value>
                <value>
                    <fullName>Not enrolled, completed postsec prior yr</fullName>
                </value>
                <value>
                    <fullName>Left postsec (incomplete) prior year</fullName>
                </value>
                <value>
                    <fullName>n/a (did not yet complete HS)</fullName>
                </value>
                <value>
                    <fullName>n/a (completed HS, not in postsec)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Accepted postsec, deferred next semester</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Service__c</fullName>
        <label>Community Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>n/a (not offered)</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Preference_Priorities__c</fullName>
        <label>Competitive Preference Priorities (TS)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received CPP tutoring only</fullName>
                </value>
                <value>
                    <fullName>Received CPP mentoring only</fullName>
                </value>
                <value>
                    <fullName>Received CPP tutoring and mentoring</fullName>
                </value>
                <value>
                    <fullName>Received neither CPP service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cultural_Activities__c</fullName>
        <label>Cultural Activities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>n/a (not offered)</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_EOC_Boston_3_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;EOC Boston&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Obj_A_Secondary_School_Diploma__c, &quot;Rec&apos;d secondary school diploma/equiv.&quot;) &amp;&amp; 
( 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Grade 12 (Senior)&apos;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Secondary School dropout&apos;) || 
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A1_Adult w/o Cred Alternative Ed&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A2_Adult w/o Cred NOT in A1 or A5&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A5_Adult w/o HS Cred postsec dropout&apos;)
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - EOC Boston - 3 Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_EOC_Boston_4_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;EOC Boston&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Financial_Aid_App_Completion__c  , &apos;Complete Other Fin Aid App (EOC)&apos;) &amp;&amp; 
( 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Grade 12 (Senior)&apos;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Secondary School dropout&apos;) || 
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A1_Adult w/o Cred Alternative Ed&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A3_HS/GED Grad NOT in postsec&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A4_Adult w/Cred postsec dropout&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A6_Potential postsec transfer&apos;)
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - EOC Boston - 4 Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_EOC_Boston_5_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;EOC Boston&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL(Obj_C_Post_Secondary_Ed_Admissions__c , &apos;Applied&apos;) &amp;&amp; 
( 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Grade 12 (Senior)&apos;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Secondary School dropout&apos;) || 
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A1_Adult w/o Cred Alternative Ed&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A3_HS/GED Grad NOT in postsec&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A4_Adult w/Cred postsec dropout&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A6_Potential postsec transfer&apos;)
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - EOC Boston - 5 Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_EOC_Boston_6A_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;EOC Boston&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Post_Secondary_Enrollment_Status__c , &apos;Earned sec dipl. &amp; enrolled PSE (UB/EOC)&apos;) &amp;&amp; 
( 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Grade 12 (Senior)&apos;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Secondary School dropout&apos;)
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - EOC Boston - 6A Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_EOC_Boston_6B_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;EOC Boston&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Post_Secondary_Enrollment_Status__c , &apos;Earned sec dipl. &amp; enrolled PSE (UB/EOC)&apos;) &amp;&amp; 
(  
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A1_Adult w/o Cred Alternative Ed&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A3_HS/GED Grad NOT in postsec&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A4_Adult w/Cred postsec dropout&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A5_Adult w/o HS Cred postsec dropout&apos;) || 
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A6_Potential postsec transfer&apos;)
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - EOC Boston - 6B Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_EOC_Brockton_3_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;EOC Brockton&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Obj_A_Secondary_School_Diploma__c, &quot;Rec&apos;d secondary school diploma/equiv.&quot;) &amp;&amp; 
( 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Grade 12 (Senior)&apos;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Secondary School dropout&apos;) || 
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A1_Adult w/o Cred Alternative Ed&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A2_Adult w/o Cred NOT in A1 or A5&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A5_Adult w/o HS Cred postsec dropout&apos;)
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - EOC Brockton - 3 Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_EOC_Brockton_4_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;EOC Brockton&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Financial_Aid_App_Completion__c  , &apos;Complete Other Fin Aid App (EOC)&apos;) &amp;&amp; 
( 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Grade 12 (Senior)&apos;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Secondary School dropout&apos;) || 
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A1_Adult w/o Cred Alternative Ed&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A3_HS/GED Grad NOT in postsec&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A4_Adult w/Cred postsec dropout&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A6_Potential postsec transfer&apos;)
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - EOC Brockton - 4 Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_EOC_Brockton_5_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;EOC Brockton&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL(Obj_C_Post_Secondary_Ed_Admissions__c , &apos;Applied&apos;) &amp;&amp; 
( 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Grade 12 (Senior)&apos;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Secondary School dropout&apos;) || 
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A1_Adult w/o Cred Alternative Ed&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A3_HS/GED Grad NOT in postsec&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A4_Adult w/Cred postsec dropout&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A6_Potential postsec transfer&apos;)
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - EOC Brockton - 5 Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_EOC_Brockton_6A_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;EOC Brockton&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Post_Secondary_Enrollment_Status__c , &apos;Earned sec dipl. &amp; enrolled PSE (UB/EOC)&apos;) &amp;&amp; 
( 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Grade 12 (Senior)&apos;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Secondary School dropout&apos;)
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - EOC Brockton - 6A Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_EOC_Brockton_6B_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;EOC Brockton&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Post_Secondary_Enrollment_Status__c , &apos;Earned sec dipl. &amp; enrolled PSE (UB/EOC)&apos;) &amp;&amp; 
(  
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A1_Adult w/o Cred Alternative Ed&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A3_HS/GED Grad NOT in postsec&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A4_Adult w/Cred postsec dropout&apos;) ||
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A5_Adult w/o HS Cred postsec dropout&apos;) || 
  ISPICKVAL( Educational_Status_at_Start_Adult__c, &apos;A6_Potential postsec transfer&apos;)
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - EOC Brockton - 6B Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_TS_Boston_3_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;TS Boston&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Secondary_School_Persistence__c  , &apos;Persisted at next grade or graduated HS&apos;) &amp;&amp; 
( 
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c , &apos;Grade 6-8 (Middle School)&apos;) || 
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c , &apos;Grade 9 (Freshman)&apos;) || 
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c , &apos;Grade 10 (Sophomor)&apos;) ||  
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c , &apos;Grade 11 (Junior)&apos;) 
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - TS Boston - 3 Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_TS_Boston_4A_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;TS Boston&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Education_Status_at_End_Senior__c, &apos;Grad in standard num yrs (non-rigorous)&apos;) &amp;&amp; 
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Grade 12 (Senior)&apos;) 
, &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - TS Boston - 4A Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_TS_Boston_4B_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;TS Boston&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Education_Status_at_End_Senior__c, &apos;Grad in standard num yrs (rigorous)&apos;) &amp;&amp; 
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Grade 12 (Senior)&apos;) 
, &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - TS Boston - 4B Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_TS_Boston_5_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;TS Boston&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Post_Secondary_Enrollment_Status__c , &apos;Enrolled or Deferred PSE (TS)&apos;) 
, &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - TS Boston - 5 Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_TS_Brockton_3_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;TS Brockton&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Secondary_School_Persistence__c  , &apos;Persisted at next grade or graduated HS&apos;) &amp;&amp; 
( 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c , &apos;Grade 6-8 (Middle School)&apos;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c , &apos;Grade 9 (Freshman)&apos;) || 
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c , &apos;Grade 10 (Sophomor)&apos;) ||  
  ISPICKVAL( Grade_Level_at_Start_Non_Adult__c , &apos;Grade 11 (Junior)&apos;) 
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - TS Brockton - 3 Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_TS_Brockton_4A_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;TS Brockton&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Education_Status_at_End_Senior__c, &apos;Grad in standard num yrs (non-rigorous)&apos;) &amp;&amp; 
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Grade 12 (Senior)&apos;) 
, &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - TS Brockton - 4A Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_TS_Brockton_4B_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;TS Brockton&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Education_Status_at_End_Senior__c, &apos;Grad in standard num yrs (rigorous)&apos;) &amp;&amp; 
ISPICKVAL( Grade_Level_at_Start_Non_Adult__c, &apos;Grade 12 (Senior)&apos;) 
, &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - TS Brockton - 4B Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_TS_Brockton_5_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;TS Brockton&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
ISPICKVAL( Post_Secondary_Enrollment_Status__c , &apos;Enrolled or Deferred PSE (TS)&apos;) 
, &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - TS Brockton - 5 Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_UB_3_Support__c</fullName>
        <formula>IF(
ISPICKVAL(Contact.Intake_Location__c, &apos;UB Brockton&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
(
  ISPICKVAL(Contact.Eligibility__c, &apos;Academic Risk only (UB)&apos;) || 
  ISPICKVAL(Contact.Eligibility__c, &apos;First-Gen only&apos;) || 
  ISPICKVAL(Contact.Eligibility__c, &apos;Low-income and academic risk (UB)&apos;) || 
  ISPICKVAL(Contact.Eligibility__c, &apos;Low-Income and First-Gen&apos;) || 
  ISPICKVAL(Contact.Eligibility__c, &apos;Low-income-first-gen-academic risk (UB)&apos;) || 
  ISPICKVAL(Contact.Eligibility__c, &apos;Low-Income only&apos;) 
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - UB - 3 Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_UB_4_Support__c</fullName>
        <formula>IF( 
  ISPICKVAL(Contact.Intake_Location__c, &apos;UB Brockton&apos;) &amp;&amp; 
  ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
  Active__c = True &amp;&amp; 
  ISPICKVAL( Met_State_Math__c , &apos;Yes&apos;) &amp;&amp;
  ISPICKVAL( Met_State_Reading__c , &apos;Yes&apos;)
, &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - UB - 4 Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_UB_5_Support__c</fullName>
        <formula>IF( 
ISPICKVAL(Contact.Intake_Location__c, &apos;UB Brockton&apos;) &amp;&amp; 
ISPICKVAL(Campaign.Service_Year__c , &apos;2017-2018&apos;) &amp;&amp; 
Active__c = True &amp;&amp; 
( 
ISPICKVAL( Secondary_School_Persistence__c , &apos;Persisted at next grade or graduated HS&apos;) || 
ISPICKVAL( HS_Graduation_End_Status__c , &apos;Received reg. secondary school diploma&apos;) || 
ISPICKVAL( HS_Graduation_End_Status__c , &apos;Received HS equivalency (e.g., GED)&apos;)
), &apos;Goal # achieved&apos; , &apos;Goal # not achieved&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB - UB - 5 Support</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Associate_Degree__c</fullName>
        <label>Date of Associate Degree</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Bachelors_Degree__c</fullName>
        <label>Date of Bachelor’s Degree</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Certificate_Diploma__c</fullName>
        <label>Date of Certificate/Diploma</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Post_Secondary_Enrollment__c</fullName>
        <inlineHelpText>Date of First Post Secondary School Enrollment.</inlineHelpText>
        <label>Date of First Post Secondary Enrollment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Project_Service__c</fullName>
        <label>Date of Last Project Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deceased_or_Incapacitated__c</fullName>
        <label>Deceased or Incapacitated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deceased (prior-year partic.)</fullName>
                </value>
                <value>
                    <fullName>Perm. incapacitated (prior-year partic.)</fullName>
                </value>
                <value>
                    <fullName>Deceased (current-year partic.)</fullName>
                </value>
                <value>
                    <fullName>Perm. incapacitated (current-year partic.)</fullName>
                </value>
                <value>
                    <fullName>n/a (not deceased nor perm. incapacita)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dual_Enrollment_Participation__c</fullName>
        <label>Dual Enrollment Participation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (in program with 5th year of HS)</fullName>
                </value>
                <value>
                    <fullName>Yes (in program WITHOUT 5th year of HS)</fullName>
                </value>
                <value>
                    <fullName>No (not in a dual enrollment program)</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dual_Enrollment_Predip_Cred_Course_Com__c</fullName>
        <inlineHelpText>Dual Enrollment: Pre-diploma Credentials or Coursework Completed.</inlineHelpText>
        <label>Dual Enroll: Pre-Diploma cred/course</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed dual-enroll Certificate</fullName>
                </value>
                <value>
                    <fullName>Completed dual-enroll Assoc. degree</fullName>
                </value>
                <value>
                    <fullName>College credit from dual enroll program</fullName>
                </value>
                <value>
                    <fullName>Did not earn Assoc. or Bach. Degree</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>n/a (prior participant)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>